Fixed mobile. Still need to fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -10686,12 +10686,6 @@ div.box {
   color: #000000;
   font-size: 1.6rem;
   cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 0;
-  padding-top: 50%;
-  padding-bottom: 50%;
 }
 
 div.box:hover {
@@ -10700,8 +10694,18 @@ div.box:hover {
   outline: 1px solid #eae0d9;
 }
 
-.top-buffer {
-  margin-top: 20px;
+.box:before {
+  content: "";
+  display: block;
+  padding-top: 50%;
+  /* initial ratio of 1:1*/
+}
+
+.box:after {
+  content: "";
+  display: block;
+  padding-top: 50%;
+  /* initial ratio of 1:1*/
 }
 
 option {
